<resources>
    <string name="app_name">GuessThePokemon</string>
    <string name="action_settings">Settings</string>

    <string name="button_gen_one">Generation One</string>
    <string name="button_gen_two">Generation Two</string>
    <string name="button_custom_game">Custom Game</string>

    <string name="imageViewDes">This is the image view that will display the pokemon</string>
    <string name="levelText">Level</string>

    <!-- Letter Buttons -->
    <string id="LetterA" name="LetterA">A</string>
    <string id="LetterB" name="LetterB">B</string>
    <string id="LetterC" name="LetterC">C</string>
    <string id="LetterD" name="LetterD">D</string>
    <string id="LetterE" name="LetterE">E</string>
    <string id="LetterF" name="LetterF">F</string>
    <string id="LetterG" name="LetterG">G</string>
    <string id="LetterH" name="LetterH">H</string>
    <string id="LetterI" name="LetterI">I</string>
    <string id="LetterJ" name="LetterJ">J</string>
    <string id="LetterK" name="LetterK">K</string>
    <string id="LetterL" name="LetterL">L</string>
    <string id="LetterM" name="LetterM">M</string>
    <string id="LetterN" name="LetterN">N</string>
    <string id="LetterO" name="LetterO">O</string>
    <string id="LetterP" name="LetterP">P</string>
    <string id="LetterQ" name="LetterQ">Q</string>
    <string id="LetterR" name="LetterR">R</string>
    <string id="LetterS" name="LetterS">S</string>
    <string id="LetterT" name="LetterT">T</string>
    <string id="LetterU" name="LetterU">U</string>
    <string id="LetterV" name="LetterV">V</string>
    <string id="LetterW" name="LetterW">W</string>
    <string id="LetterX" name="LetterX">X</string>
    <string id="LetterY" name="LetterY">Y</string>
    <string id="LetterZ" name="LetterZ">Z</string>

    <string id="Blank" name="Blank"> </string>

    <string id="successguess" name="successguess">Successful Guess</string>

    <string id="guessLabel" name="guessLabel">Num of Guesses</string>

    <string id="successdialog" name="successdialog">Successful Guess!</string>
    <string id="nxtPkmon" name="nxtPkmon">Next Pokemon</string>
</resources>
