<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alphabytedesigns.guessthepokemon.Activities.MainGameActivity">

    <TextView
        android:id="@+id/lblLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/levelText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_below="@+id/lblLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/imageViewDes"
        android:src="@drawable/bulbasaur" />


    <GridLayout
        android:id="@+id/grdAnswerKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/grdPokemonName"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="2"
        tools:context=".GridXMLActivity"
        android:visibility="visible">

        <Button
            android:id="@+id/btnLetter1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_marginTop="0dp"
            android:layout_row="0"
            android:text="@string/LetterA" />

        <Button
            android:id="@+id/btnLetter2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/LetterB" />

        <Button
            android:id="@+id/btnLetter3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/LetterC" />

        <Button
            android:id="@+id/btnLetter4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:text="@string/LetterD" />

        <Button
            android:id="@+id/btnLetter5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="4"
            android:layout_row="0"
            android:text="@string/LetterE" />

        <Button
            android:id="@+id/btnLetter6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="5"
            android:layout_row="0"
            android:text="@string/LetterF" />

        <Button
            android:id="@+id/btnLetter12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="5"
            android:layout_row="1"
            android:text="@string/LetterL" />

        <Button
            android:id="@+id/btnLetter7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/LetterG" />

        <Button
            android:id="@+id/btnLetter8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/LetterH" />

        <Button
            android:id="@+id/btnLetter10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/LetterJ" />

        <Button
            android:id="@+id/btnLetter11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="4"
            android:layout_row="1"
            android:text="@string/LetterK" />

        <Button
            android:id="@+id/btnLetter9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/LetterI" />
    </GridLayout>

    <GridLayout
        android:id="@+id/grdPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivPokemon"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:columnCount="12"
        android:orientation="vertical"
        android:rowCount="1"
        tools:context=".GridXMLActivity" >

        <Button
            android:id="@+id/btnAnswer1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="0"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnAnswer2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="1"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:drawablePadding="-5sp"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="3"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="4"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="5"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="6"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="7"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer9"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="8"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />

        <Button
            android:id="@+id/btnAnswer10"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="9"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_row="0"
            android:text="@string/Blank" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successguess"
        android:id="@+id/SuccessDialog"
        android:textSize="35sp"
        android:textColor="#000000"
        android:layout_below="@+id/grdPokemonName"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNxtPkmon"
        android:layout_below="@+id/SuccessDialog"
        android:layout_marginTop="10dp"
        android:text="@string/nxtPkmon"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:visibility="invisible"
        android:enabled="false" />

    <TextView
        android:text="@string/guessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblLevel"
        android:id="@+id/lblNumGuesses"
        android:layout_above="@+id/ivPokemon"
        android:layout_toRightOf="@+id/grdAnswerKeys"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
